--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,3 +1,10 @@
+.container{
+    padding-top: 30px;
+}
+/* Шаринг */
+
+
+
 #map{ 
     width: 100%;
     height: 400px;
@@ -27,8 +34,31 @@
     justify-content: center;
     align-items: center;
 }
+
 .form-main{
     padding-top: 20px;
+}
+#comment{
+    width: 250px;
+    height: 70px;
+    white-space: pre-wrap;
+}
+#counter{
+    font-size: 14px;
+    position: relative;
+    left: 200px;
+}
+
+#submit{
+    width: 200px;
+    height: 50px;
+    background-color: brown;
+    color: white;
+    border: 0;
+    border-radius: 10px;
+}
+#submit:hover{
+    cursor: pointer;
 }
 .inline{
     display: flex;
@@ -42,6 +72,7 @@
     height: 30px;
     border-radius: 7px;
 }
+
 .inline input:focus{
     /* border: 0; */
     outline: 0px;
@@ -76,7 +107,6 @@
 .adress-info
 {
     display: flex;
-    
 }
 .social-items{
     padding-top: 20px;
@@ -95,6 +125,11 @@
     transform: scale(1.1);
 }
 
+.fb-share-button{
+    position: absolute;
+    padding-left: 10px;
+    /* top: 1000px; */
+}
 
 @media all and (max-width:1150px){
  
