--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -43,13 +43,128 @@
     padding: 0 10%;
     text-align: center;
 }
-
-
-@media all and (max-width:500px){
-    
+.gallery-main{
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 10px;
 }
-@media all and (max-width:1000px){
+.gallery-item{
+    width: 300px;
+    height: 300px;
+    background-color: red;
+}
+.another{
+    width: 404px;
+    height: 120px;
+    background-color: blue;
+}
+/* pagination */
+/* .num {
+  display: none;
+}
+.paginator {
+  line-height: 150%;
+}
+.paginator > span {
+  display: inline-block;
+  margin-right: 10px;
+  cursor: pointer;
+}
+.paginator_active {
+  color: red;
+} */
+/*  */
+
+
+/* pagination */
+#pagination{
+  padding-top: 20px;
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+}
+#pagination li{
+  padding:5px 10px;
+  border: 1px solid grey;
+
+}
+#pagination li:hover,#pagination li.active{
+  cursor: pointer;
+  border: 1px solid red;
+  color: red;
+}
+
+
+
+
+/*  */
+.imageGrid {
+    line-height: 0;
+    width: 100%;
+  }
+ 
+  .imageGrid .tile {
+    margin: 4px;
+    width:300px;
+    min-height:300px;
+    line-height: 1.2;
+    display:inline-block;
+    /* background-image: url(/images/portfolio1.jpg); */
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    position: relative;
+    color:#fff;
+    font-family:"Roboto",sans-serif;
+    text-shadow: 2px 2px 2px #000;
+    cursor: pointer; 
+    /* cursor: hand; */
+    
+  }
+  
+  .imageGrid .tile:before {
+    content: '';
+    background-color: rgba(15,15,15,0.5);
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }  
+  .imageGrid .tile:hover:before {
+    display: none;
+  }
+  
+  .imageGrid .tile .textWrapper {
+    text-align: center;
+    /* vertical-align: middle; */
+    width:90%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: .75em;
+  }
+  
+  .imageGrid .tile .textWrapper .content {
+    display: none;
+  }
+  
+  .imageGrid .tile:hover .textWrapper .content {
+    display: block;
+  }
+  
+  .imageGrid .tile:hover .textWrapper .content h2 {
+    margin: 0;
+  }
+
+  @media (max-width: 1000px) {
+    .imageGrid .tile {
+      width: 300px;
+    }
     .main_header{
         display: none;
     }
-}
+  }
+   
