--- a/styles/blog.css
+++ b/styles/blog.css
@@ -32,17 +32,30 @@
 .block-add{
     display: grid;
     justify-content: center;
-    width: 400px;
+    width: 350px;
+
+}
+.block-name label,
+.block-body label,
+.block-add{
+    justify-content: left;
+    text-align: left;
+
 }
 .comment-name{
     margin-bottom: 10px;
-    width: 150px;
+    width: 350px;
+    height: 40px;
+    border: 1px solid rgba(128, 128, 128, 0.245);
+
 }
 .comment-body{
     margin-bottom: 15px;
-    width: 250px;
-    height: 60px;
+    width: 350px;
+    height: 80px;
     border-radius: 5px;
+    border: 1px solid rgba(128, 128, 128, 0.245);
+
 
 }
 
@@ -55,13 +68,30 @@
 .comment-add:hover{
     cursor: pointer;
 }
-
+.containerForComments{
+    max-width: 100%;
+    display: grid;
+    justify-content: center;
+}
+.infoBlock{
+    display: flex;
+    justify-content: space-between;
+}
 
 .timeBlock{
     font-size: 10px;
+    position: relative;
+    top: 10px;
 
 }
-.bodyBlock{
+.nameBlock{
     font-size: 20px;
-    padding-bottom: 40px;
+}
+.bodyBlock{
+    text-align: center;
+    font-size: 20px;
+    width: 400px;
+    margin-bottom: 40px;
+    border: 1px solid grey;
+    background-color: rgba(205, 221, 220, 0.626);
 }
