--- a/styles/nav.css
+++ b/styles/nav.css
@@ -15,9 +15,10 @@ a{
     font-size:16px;
     color:#fff;
     line-height:1.5;
-    font-family: 'Roboto',sans-serif;
+    font-family: 'Devroye';
     background:rgba(31, 39, 46, 0.5);
     width:100%;
+    height: 100px;
     position:fixed;
     display: grid;
     grid-template-columns: auto auto;
@@ -315,7 +316,7 @@ nav li li a:hover{
 @media all and (max-width:500px){
     .header{
         background:rgb(31, 39, 46);
-        margin-bottom: 300px;
+        margin-bottom: 150px;
     }
    
 }
