--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,7 +17,7 @@
     font-size: 45px;
     font-weight: bold;
     color: white;
-    font-family: 'Amatic SC', cursive;
+    font-family: 'Nautilus';
     letter-spacing: 0.3em;
 }
 .main_header-main{
@@ -42,6 +42,7 @@
     width: 100%;
     padding: 0 10%;
     text-align: center;
+    
 }
 .gallery-main{
     width: 100%;
@@ -52,7 +53,7 @@
 .gallery-item{
     width: 300px;
     height: 300px;
-    background-color: red;
+    /* background-color: red; */
 }
 .another{
     width: 404px;
@@ -109,7 +110,8 @@
   }
  
   .imageGrid .tile {
-    margin: 4px;
+    
+    margin: 6px;
     width:300px;
     min-height:300px;
     line-height: 1.2;
@@ -124,6 +126,8 @@
     font-family:"Roboto",sans-serif;
     text-shadow: 2px 2px 2px #000;
     cursor: pointer; 
+    box-shadow: 2px 2px 2px 2px grey;
+
     /* cursor: hand; */
     
   }
@@ -172,3 +176,9 @@
     }
   }
    
+@media all and (max-width:400px){
+  .imageGrid .tile{
+    width: 250px;
+    height: 250px;
+  }
+}
