--- a/styles/service-items.css
+++ b/styles/service-items.css
@@ -596,6 +596,9 @@ justify-content: center;}
         grid-gap: 30px;
 
     }
+    .price-header{
+        font-size: 20px;
+    }
     .price{
         width: 300px;
         padding-bottom: 30px;
