--- a/styles/main.css
+++ b/styles/main.css
@@ -28,8 +28,8 @@
   }
   
   body {
-    background: #ffffff;
+    background: #F5F5F5;
     color: #141414cf;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Blogger-Italic', sans-serif;
 
   }
