--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -79,22 +79,20 @@ color: red;
 
 
 /* pagination */
-.pagination1,.pagination2{
+.pagination1{
 height: 50px;
 padding-top: 20px;
 list-style-type: none;
 display: flex;
 justify-content: center;
 }
-.pagination1 li,.pagination1 li
+.pagination1 li
 {
 padding:5px 10px;
 border: 1px solid grey;
 
 }
-.pagination1 li:hover,.pagination1 li.active,
-.pagination2 li:hover,.pagination2 li.active
-{
+.pagination1 li:hover,.pagination1 li.active{
 cursor: pointer;
 border: 1px solid red;
 color: red;
