--- a/styles/contact.css
+++ b/styles/contact.css
@@ -8,6 +8,8 @@
 #map{ 
     width: 100%;
     height: 400px;
+    box-shadow:  0px 0px 5px 3px grey;
+
 }
 .contact-info a{
     color: black;
@@ -44,8 +46,13 @@
 }
 
 
+
 .form-main{
-    padding-top: 20px;
+    padding-top: 40px;
+}
+.date{
+    position: relative;
+    bottom: 5px;
 }
 #comment{
     width: 250px;
@@ -56,9 +63,11 @@
     font-size: 14px;
     position: relative;
     left: 200px;
+    
 }
 
 #submit{
+    margin-top: 30px;
     width: 200px;
     height: 50px;
     background-color: brown;
@@ -81,7 +90,18 @@
     height: 30px;
     border-radius: 7px;
 }
+input:valid{
+    border: 1px dotted green;
+    box-shadow: 0px 0px 2px 1px green;
+}
+input:invalid{
+    border: 1px dotted red;
+    box-shadow: 0px 0px 2px 1px red;
 
+}
+/* .input:last-child{
+    border: none;
+} */
 .inline input:focus{
     /* border: 0; */
     outline: 0px;
@@ -105,20 +125,37 @@
 .workday{
     text-align: left;
     width: 100%;
+    padding: 10px;
+}
+.social h3,
+.phone h3,
+.adress h3,
+.workday h3{
+    font-size: 24px;
+    text-shadow: 1px 1px 0px #80808092;
 }
 .workday img,
-.adress img
+.adress img,
+.phone img
 {
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
 }
 .workday-info,
-.adress-info
+.adress-info,
+.phone-info
 {
+    padding-top: 5px;
     display: flex;
+    flex-direction: row;
+}
+
+.share-info{
+    display: inline-block;
+
 }
 .social-items{
-    padding-top: 20px;
+    padding-top: 5px;
     /* padding-left: 20px; */
     display: flex;
     flex-direction: row;
@@ -136,16 +173,24 @@
 
 .fb-share-button{
     position: absolute;
-    padding-left: 10px;
+    /* padding-left: 10px; */
     /* top: 1000px; */
 }
+.twitter-share-button{
+    /* position: absolute; */
+    margin-right: 10px;
+    
 
+}
 #map{
-    margin: 30px 0;
+    margin: 50px 0;
     border-radius: 10px;
 }
 @media all and (max-width:1150px){
- 
+    #counter{
+        position: relative;
+        left: 100px;
+    }
 
     .inline{
         flex-direction: column;
