--- a/styles/nav.css
+++ b/styles/nav.css
@@ -12,10 +12,10 @@ a{
 .header{
 
     text-transform:uppercase;
-    font-size:16px;
+    font-size:15px;
     color:#fff;
     line-height:1.5;
-    font-family: 'Roboto',sans-serif;
+    font-family: 'Devroye',sans-serif;
     background:rgba(31, 39, 46, 0.5);
     width:100%;
     position:fixed;
@@ -69,18 +69,20 @@ a{
     padding:26px 0 26px;
 }
 .logo a{
-    font-size:28px;
+    font-size:27px;
     display:block;
     padding:0 0 0 30px;
 }
 nav{
     display: grid;
     grid-template-columns: 5fr 1fr;
+
 }
 nav>ul{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     width: auto;
+
     /* justify-content: center; */
      /* position:relative; */
 }
@@ -90,6 +92,7 @@ nav li{
 }
 
 nav .dropdown{
+
     position:relative;
 }
 nav li a{
@@ -156,7 +159,7 @@ nav li li a:hover{
 
 #menu-icon{
     position:absolute;
-    right:0;
+    right:-10px;
     top:50%;
     margin-top:-12px;
     margin-right:30px;
@@ -183,6 +186,7 @@ nav li li a:hover{
 @media only screen and (min-width: 1001px) {
     nav{
         display:block;
+
       }
       
   }
@@ -190,6 +194,7 @@ nav li li a:hover{
 @media only screen and (max-width: 1180px) {
     nav >ul>li >a{
       padding:35px 15px;
+
     }
    
     
@@ -201,6 +206,7 @@ nav li li a:hover{
     .header{
         background:rgba(31, 39, 46, 0.762);
 
+
     }
     nav{
         display:none;
@@ -211,6 +217,7 @@ nav li li a:hover{
         text-align: center;
 
 
+
       }
     nav>ul{
         display: grid;
@@ -218,14 +225,18 @@ nav li li a:hover{
         grid-template-columns: 1fr ;
 
     }
-    #menu-icon{display:inline;
-      top:45px;
-      cursor:pointer;
+    
+    #menu-icon{
+        display:inline;
+        top:45px;
+        cursor:pointer;
+
   }
     #menu-icon.active .first{
         transform:rotate(45deg);
         -webkit-transform:rotate(45deg);
         margin-top:10px;
+
       }
     #menu-icon.active .second{
         transform:rotate(135deg);
@@ -241,6 +252,7 @@ nav li li a:hover{
     nav{
         padding:50px;
         padding-top: 40px;
+
       }
   
     nav ul li a{
@@ -248,7 +260,7 @@ nav li li a:hover{
         padding:8px;
         display:block;
       }
-      .header{
+    .header{
           grid-template-columns: auto;
       }
     .header nav ul ul{
@@ -257,6 +269,7 @@ nav li li a:hover{
         background:none;
         border:none;
         padding:0;
+
       }
     .header nav a{
         color:#fff;
@@ -266,6 +279,7 @@ nav li li a:hover{
         background:#fff;
         color:#333;
         border-radius:3px;
+
       
       }
     .header nav ul li li a:before{
@@ -273,6 +287,7 @@ nav li li a:hover{
       }
     .header nav ul li li a::after{
         content: " -";
+
     }
       .search{
           width: 100%;
@@ -306,6 +321,7 @@ nav li li a:hover{
           top: 36px;
           
       }
+     
   
   }
 
@@ -317,6 +333,7 @@ nav li li a:hover{
         background:rgb(31, 39, 46);
         margin-bottom: 300px;
     }
+    
    
 }
 
