--- a/styles/service.css
+++ b/styles/service.css
@@ -69,6 +69,7 @@
     font-size: 25px;
     letter-spacing: 5px;
     text-align: left;
+    text-shadow: 2px 1px 1px rgba(129, 128, 128, 0.857);
     
 }
 .service-price{
