--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -27,7 +27,7 @@
   bottom: 300px;
   font-weight: bold;
   color: white;
-  font-family: 'Amatic SC', cursive;
+  font-family: 'AmaticSC' ;
   letter-spacing: 0.3em;
   opacity: 0.8;
 }
