--- a/styles/service-items.css
+++ b/styles/service-items.css
@@ -155,10 +155,16 @@
     color: rgb(221, 45, 45);
 }
 .booking{
-    text-align: center;
-    padding-top: 10px;    
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
 }
-.booking input{
+.booking a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-family:'Blogger-Italic';
     width: 220px;
     height: 50px;
     background-color :rgb(221, 45, 45);
@@ -167,7 +173,7 @@
     color: white;
     font-weight: bold;
 }
-.booking input:hover{
+.booking a:hover{
     background-color: #111111;
     transition: all linear .3s ;
     cursor: pointer;
@@ -439,7 +445,6 @@
     cursor: pointer;
     transition: all 1s linear;
     filter: contrast(1.5);
-    filter: drop-shadow(2);
     color: blue;
 }
 
@@ -694,7 +699,7 @@ justify-content: center;}
     
     }
     .price-price{
-        font-family: 14px;
+        font-size: 14px;
     }
     .price{
         font-size: 12px;
