--- a/styles/service.css
+++ b/styles/service.css
@@ -85,9 +85,13 @@
     height: 20px;
 }
 .service-about{
-    text-align: left;
+    display: flex;
+    justify-content: center;
 }
-.service-button input{
+.service-button a{
+    display: grid;
+    justify-content: center;
+    align-items:center;
     width: 170px;
     height: 50px;
     background-color:  rgb(25, 247, 224);
@@ -95,11 +99,15 @@
     border: none;
     color: white;
     font-size: 20px;
+    border-radius: 10px;
+    box-shadow: 1px 2px 2px 2px rgba(81, 138, 230, 0.748) ;
 }
-.service-button input:hover{
+.service-button a:hover{
     cursor: pointer;
     background-color:black;
     transition: all linear .3s;
+    box-shadow: 1px 2px 2px 2px grey ;
+
 }
 /* second block */
 .service-photo2{
@@ -236,7 +244,7 @@
     .service-button{
         padding-top: 30px;
     }
-    .service-button input{
+    .service-button a{
         
         width: 150px;
         height: 50px;
