--- a/styles/mainBlock.css
+++ b/styles/mainBlock.css
@@ -3,44 +3,18 @@
     margin:0;
     padding:0;
   }
-
+header{
+    height: auto;
+}
 .main-head-photo{
     display: none;
     min-width: 100%;
     height: 500px;
     background-size: cover;
+    background-repeat: repeat;
     
 }
 
-/* .headOfBlock{
-    padding: 10px 0;
-    border-bottom: 2px solid rgba(0,0,0,.05); 
-    text-align: center;
-}
-.headOfBlock h2{
-    font-size: 20px;
-    letter-spacing: 1px;
-    max-width: 0px;
-    width: 100%;
-    position: relative;
-    display: inline-block;
-    color: #465457;
-}
-.headOfBlock h2::before{
-    content: "";
-    position: absolute;
-    top: 42px;
-    left:0;
-    right: 300px;
-    height: 6px;
-    
-    border-top: 2px solid #BBC9C9;
-    border-bottom: 2px solid #BBC9C9;
-}
-.headOfBlock span{
-    background: rgb(255, 255, 255);
-    padding: 0 20px;
-} */
 .mainInfo{
     position: relative;
     bottom: 150px;
@@ -339,12 +313,14 @@
 @media all and (max-width:960px){
     .mainInfo{
         position: relative;
-        bottom: 0px;
+        bottom: 140px;
     }
     .main-head-photo{
         display: block;
         position: relative;
-        bottom: 70px;
+        bottom: 200px;
+        /* height: 520px; */
+        background-repeat: no-repeat;
     }
     
     .whyme{
@@ -371,7 +347,7 @@
 @media all and (max-width:760px){
     .mainInfo{
         position: relative;
-        bottom: 150px;
+        bottom: 100px;
     }
     .main-head-photo{
         display: none;
@@ -390,9 +366,9 @@
     .footer-menu li{
         font-size: 10px;
     }
-    .mainInfo{
+    /* .mainInfo{
         padding-top: 90px;
-    }
+    } */
     /* .whyme{
         grid-template-columns: auto;
         width: 200px;
@@ -402,10 +378,11 @@
     } */
 }
 
-@media all and (max-width:600px){
+@media all and (max-width:550px){
     .mainInfo{
         position: relative;
-        bottom: 29 px;
+        bottom: 200px;
+        /* padding-bottom: 200px; */
     }
     .myphoto img {
         width: 300px;
@@ -418,7 +395,12 @@
     }
     
 }
-
+/* @media all and(max-width:545px){
+    .mainInfo{
+        position: relative;
+        bottom: 300px;
+    }
+} */
 @media all and (max-width:450px){
     /* .listOfSkills{
         width: 250px;
